[package]
name = "kms"
version = "0.3.1"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"

[dependencies.curv]
package = "curv-kzen"
version = "0.9"

[dependencies.paillier]
package = "kzen-paillier"
git = "https://github.com/KZen-networks/rust-paillier"
default-features = false

[dependencies.zk-paillier]
git = "https://github.com/KZen-networks/zk-paillier"
default-features = false

[dependencies.multi-party-schnorr]
git = "https://github.com/same-id/multi-party-schnorr"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/same-id/multi-party-ecdsa"
default-features = false

[dependencies.centipede]
git = "https://github.com/KZen-networks/centipede"
default-features = false

[features]
default = ["curv/rust-gmp-kzen"]
